manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-deployment
  namespace: personal-site
spec:
  replicas: 2
  selector:
    matchLabels:
      app: personal-site
  template:
    metadata:
      labels:
        app: personal-site
    spec:
      imagePullSecrets:
      - name: zot-credentials
      containers:
      - name: site
        image: registry.naseyro.com/site:v0.1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 5m
            memory: 10Mi
          limits:
            cpu: 50m
            memory: 20Mi
