manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-service
  namespace: personal-site
spec:
  type: ClusterIP
  selector:
    app: personal-site
  ports:
  - port: 80
    targetPort: 80
