manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-site
  namespace: personal-site
spec:
  ingressClassName: traefik
  rules:
    - host: naseyro.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: site-service
                port:
                  number: 80
